@@ -1,3 +1,9 @@
+Wed Sep 19 17:59:27 2001  Owen Taylor  <otaylor@redhat.com>
+
+	* gdk/x11/gdkwindow-x11.c (gdk_window_new): Set
+	_NET_WM_PID and WM_CLIENT_MACHINE properties on each
+	window, not just on the client leader. (#58463)
+
 Wed Sep 19 17:28:47 2001  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkwidget.c (gtk_widget_new): Add missing cast.
